--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "survos-sites/pokemon",
+    "description": "onsenui pokemon tutorial as a Symfony PWA",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
@@ -14,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
         "spomky-labs/pwa-bundle": "1.2.x",
+        "survos/deployment-bundle": "^1.5",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
