--- a/composer.json
+++ b/composer.json
@@ -108,7 +108,9 @@
     },
     "require-dev": {
         "dbrekelmans/bdi": "^1.3",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
+        "pierstoval/smoke-testing": "^1.0.1",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
