--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,15 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
         "spomky-labs/pwa-bundle": "1.2.x",
+        "survos/core-bundle": "*",
         "survos/deployment-bundle": "^1.5",
+        "survos/js-twig-bundle": "*",
+        "survos/mobile-bundle": "^1.5",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/doctrine-messenger": "7.0.*",
+        "symfony/dom-crawler": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/expression-language": "7.0.*",
         "symfony/filesystem": "7.0.*",
