--- a/config/packages/pwa.yaml
+++ b/config/packages/pwa.yaml
@@ -3,7 +3,7 @@
 pwa:
     image_processor: 'pwa.image_processor.imagick'
     manifest:
-        enabled: false
+        enabled: true
         background_color: "#c026d3"
         theme_color: "#c026d3"
         name: 'Pokemon Collector'
@@ -34,7 +34,7 @@ pwa:
             - platform: "webapp"
               url: "https://localhost:8000/site.webmanifest"
     serviceworker:
-        enabled: false
+        enabled: true
         src: "sw.js"
         skip_waiting: true
         workbox:
