--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "endroid/qr-code-bundle": "^5.0",
+        "knplabs/knp-menu-bundle": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
+        "sensiolabs/typescript-bundle": "^0.1.3",
         "spomky-labs/pwa-bundle": "1.2.x",
         "survos/core-bundle": "*",
         "survos/deployment-bundle": "^1.5",
@@ -115,6 +117,7 @@
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "pierstoval/smoke-testing": "^1.0.1",
+        "survos/maker-bundle": "^1.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
