--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,24 @@
         "ext-gd": "*",
         "ext-iconv": "*",
         "ext-imagick": "*",
+        "api-platform/core": "^3.2",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "endroid/qr-code-bundle": "^5.0",
         "knplabs/knp-menu-bundle": "^3.4",
+        "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
         "sensiolabs/typescript-bundle": "^0.1.3",
         "spomky-labs/pwa-bundle": "1.2.x",
         "survos/core-bundle": "*",
+        "survos/crawler-bundle": "^1.5",
         "survos/deployment-bundle": "^1.5",
         "survos/js-twig-bundle": "*",
         "survos/mobile-bundle": "^1.5",
+        "survos/scraper-bundle": "^1.5",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
@@ -114,6 +118,7 @@
     },
     "require-dev": {
         "dbrekelmans/bdi": "^1.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "pierstoval/smoke-testing": "^1.0.1",
