--- a/config/packages/pwa.yaml
+++ b/config/packages/pwa.yaml
@@ -1,7 +1,7 @@
 #imports:
 #    - { resource: pwa_screenshots.yaml }
 pwa:
-    image_processor: 'pwa.image_processor.imagick'
+    image_processor: 'pwa.image_processor.gd'
     manifest:
         enabled: true
         background_color: "#c026d3"
