--- a/composer.json
+++ b/composer.json
@@ -12,59 +12,59 @@
         "ext-iconv": "*",
         "ext-imagick": "*",
         "api-platform/core": "^3.2",
-        "doctrine/dbal": "^3",
+        "doctrine/dbal": "^4.0",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.1",
+        "doctrine/orm": "^3.2",
         "endroid/qr-code-bundle": "^5.0",
         "knplabs/knp-menu-bundle": "^3.4",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
         "sensiolabs/typescript-bundle": "^0.1.3",
-        "spomky-labs/pwa-bundle": "1.2.x",
-        "survos/core-bundle": "*",
+        "spomky-labs/pwa-bundle": "^1.2",
+        "survos/core-bundle": "^1.5",
         "survos/crawler-bundle": "^1.5",
         "survos/deployment-bundle": "^1.5",
-        "survos/js-twig-bundle": "*",
+        "survos/js-twig-bundle": "^1.5",
         "survos/mobile-bundle": "^1.5",
         "survos/scraper-bundle": "^1.5",
-        "symfony/asset": "7.0.*",
-        "symfony/asset-mapper": "7.0.*",
-        "symfony/console": "7.0.*",
-        "symfony/doctrine-messenger": "7.0.*",
-        "symfony/dom-crawler": "7.0.*",
-        "symfony/dotenv": "7.0.*",
-        "symfony/expression-language": "7.0.*",
-        "symfony/filesystem": "7.0.*",
+        "symfony/asset": "^7.1",
+        "symfony/asset-mapper": "^7.1",
+        "symfony/console": "^7.1",
+        "symfony/doctrine-messenger": "^7.1",
+        "symfony/dom-crawler": "^7.1",
+        "symfony/dotenv": "^7.1",
+        "symfony/expression-language": "^7.1",
+        "symfony/filesystem": "^7.1",
         "symfony/flex": "^2",
-        "symfony/form": "7.0.*",
-        "symfony/framework-bundle": "7.0.*",
-        "symfony/http-client": "7.0.*",
-        "symfony/intl": "7.0.*",
-        "symfony/mailer": "7.0.*",
-        "symfony/mime": "7.0.*",
+        "symfony/form": "^7.1",
+        "symfony/framework-bundle": "^7.1",
+        "symfony/http-client": "^7.1",
+        "symfony/intl": "^7.1",
+        "symfony/mailer": "^7.1",
+        "symfony/mime": "^7.1",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "7.0.*",
+        "symfony/notifier": "^7.1",
         "symfony/panther": "^2.1",
-        "symfony/process": "7.0.*",
-        "symfony/property-access": "7.0.*",
-        "symfony/property-info": "7.0.*",
-        "symfony/runtime": "7.0.*",
-        "symfony/security-bundle": "7.0.*",
-        "symfony/serializer": "7.0.*",
+        "symfony/process": "^7.1",
+        "symfony/property-access": "^7.1",
+        "symfony/property-info": "^7.1",
+        "symfony/runtime": "^7.1",
+        "symfony/security-bundle": "^7.1",
+        "symfony/serializer": "^7.1",
         "symfony/stimulus-bundle": "^2.16",
-        "symfony/string": "7.0.*",
-        "symfony/translation": "7.0.*",
-        "symfony/twig-bundle": "7.0.*",
+        "symfony/string": "^7.1",
+        "symfony/translation": "^7.1",
+        "symfony/twig-bundle": "^7.1",
         "symfony/ux-turbo": "^2.16",
         "symfony/ux-twig-component": "^2.16",
-        "symfony/validator": "7.0.*",
-        "symfony/web-link": "7.0.*",
-        "symfony/yaml": "7.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/intl-extra": "^3.9",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/validator": "^7.1",
+        "symfony/web-link": "^7.1",
+        "symfony/yaml": "^7.1",
+        "twig/extra-bundle": "^3.0",
+        "twig/intl-extra": "^3.10",
+        "twig/twig": "^3.0"
     },
     "config": {
         "allow-plugins": {
@@ -114,7 +114,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.0.*"
+            "require": "^7.1"
         }
     },
     "require-dev": {
@@ -124,12 +124,12 @@
         "phpunit/phpunit": "^9.5",
         "pierstoval/smoke-testing": "^1.0.1",
         "survos/maker-bundle": "^1.5",
-        "symfony/browser-kit": "7.0.*",
-        "symfony/css-selector": "7.0.*",
-        "symfony/debug-bundle": "7.0.*",
+        "symfony/browser-kit": "^7.1",
+        "symfony/css-selector": "^7.1",
+        "symfony/debug-bundle": "^7.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^7.0",
-        "symfony/stopwatch": "7.0.*",
-        "symfony/web-profiler-bundle": "7.0.*"
+        "symfony/stopwatch": "^7.1",
+        "symfony/web-profiler-bundle": "^7.1"
     }
 }
