--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,17 @@
         "ext-gd": "*",
         "ext-iconv": "*",
         "ext-imagick": "*",
-        "api-platform/core": "^3.2",
+        "api-platform/core": "^4.0",
         "doctrine/dbal": "^4.0",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
-        "endroid/qr-code-bundle": "^5.0",
+        "endroid/qr-code-bundle": "^6.0",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "knplabs/knp-menu-bundle": "^3.4",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpdoc-parser": "^1.28",
-        "sensiolabs/typescript-bundle": "^0.1.3",
-        "spomky-labs/pwa-bundle": "^1.2",
+        "spomky-labs/pwa-bundle": "1.3.x",
         "survos/core-bundle": "^1.5",
         "survos/crawler-bundle": "^1.5",
         "survos/deployment-bundle": "^1.5",
@@ -122,8 +120,8 @@
     "require-dev": {
         "dbrekelmans/bdi": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^3.5",
-        "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^2.0",
+        "phpunit/phpunit": "^11.4",
         "pierstoval/smoke-testing": "^1.0.1",
         "survos/maker-bundle": "^1.5",
         "symfony/browser-kit": "^7.1",
