--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "symfony/string": "^7.1",
         "symfony/translation": "^7.1",
         "symfony/twig-bundle": "^7.1",
+        "symfony/ux-icons": "^2.22",
         "symfony/ux-turbo": "^2.16",
         "symfony/ux-twig-component": "^2.16",
         "symfony/validator": "^7.1",
