--- a/config/packages/pwa.yaml
+++ b/config/packages/pwa.yaml
@@ -45,15 +45,14 @@ pwa:
                   preload_urls:
                       - 'app_index'
                       - 'app_offline'
-#            resource_caches:
-#                - match_callback: 'origin: https://cdn.jsdelivr.net'
-#                  strategy: 'CacheOnly'
-#                  preload_urls: # Optional, but you are now sure the library is preloaded even if used on another page the user never met before
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/js/onsenui.min.js'
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/ionicons/css/ionicons.min.css'
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsen-css-components.min.css'
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/material-design-iconic-font/fonts/Material-Design-Iconic-Font.woff2?v=2.2.0'
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/material-design-iconic-font/css/material-design-iconic-font.min.css'
-#                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/font_awesome/webfonts/fa-brands-400.woff2'
+                - match_callback: 'origin: https://cdn.jsdelivr.net'
+                  strategy: 'CacheOnly'
+                  preload_urls: # Optional, but you are now sure the library is preloaded even if used on another page the user never met before
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/js/onsenui.min.js'
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/ionicons/css/ionicons.min.css'
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsen-css-components.min.css'
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/material-design-iconic-font/fonts/Material-Design-Iconic-Font.woff2?v=2.2.0'
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/material-design-iconic-font/css/material-design-iconic-font.min.css'
+                      - 'https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/font_awesome/webfonts/fa-brands-400.woff2'
             offline_fallback:
                 page: 'app_offline'
