--- a/composer.json
+++ b/composer.json
@@ -107,6 +107,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile": [
+            "php -d memory_limit=512M bin/console app:load --limit 100"
         ]
     },
     "conflict": {
