add routes to preload

--- a/config/packages/pwa.yaml
+++ b/config/packages/pwa.yaml
@@ -45,6 +45,7 @@ pwa:
                   strategy: 'NetworkFirst'
                   network_timeout: 4
                   preload_urls:
+                      - '/js/fos_js_routes.js'
                       - 'app_index'
                       - 'app_offline'
             offline_fallback:
