client page length

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -14,3 +14,4 @@ api_platform:
         extra_properties:
             standard_put: true
             rfc_7807_compliant_errors: true
+        pagination_client_items_per_page: true
