--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "survos-sites/pokemon",
     "description": "onsenui pokemon tutorial as a Symfony PWA",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",    
+    "keywords": ["tutorial","pwa","symfony"],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
@@ -57,6 +58,7 @@
         "symfony/translation": "^7.1",
         "symfony/twig-bundle": "^7.1",
         "symfony/ux-icons": "^2.22",
+        "symfony/ux-live-component": "^2.23",
         "symfony/ux-turbo": "^2.16",
         "symfony/ux-twig-component": "^2.16",
         "symfony/validator": "^7.1",
