--- a/config/packages/pwa.yaml
+++ b/config/packages/pwa.yaml
@@ -1,52 +1,52 @@
-#imports:
-#    - { resource: pwa_screenshots.yaml }
-pwa:
-    image_processor: 'pwa.image_processor.gd'
-    manifest:
-        enabled: false
-        background_color: "#c026d3"
-        theme_color: "#c026d3"
-        name: 'Pokemon Collector'
-        short_name: 'pokemon'
-        description: 'OnsenUI tutorial, in Symfony'
-        orientation: "any"
-        display: "standalone"
-        scope: "/"
-        display_override: ['fullscreen', 'minimal-ui', 'window-controls-overlay']
-        id: "/"
-        start_url: "/"
-        icons:
-            - src: "images/pokemon.svg"
-              sizes: "any"
-        screenshots:
-            -
-                src: homepage/screenshot-600x800.png
-                width: 600
-                height: 800
-                reference: 'https://127.0.0.1:8001/'
-                format: image/png
-        categories: []
-        shortcuts: []
-        edge_side_panel:
-            preferred_width: 280
-        widgets: []
-        related_applications:
-            - platform: "webapp"
-              url: "https://localhost:8000/site.webmanifest"
-    serviceworker:
-        enabled: false
-        src: "sw.js"
-        skip_waiting: true
-        workbox:
-            resource_caches:
-                - match_callback: 'navigate'
-                  max_age: 365 days
-                  max_entries: 200
-                  strategy: 'NetworkFirst'
-                  network_timeout: 4
-                  preload_urls:
-                      - '/js/fos_js_routes.js'
-                      - 'app_index'
-                      - 'app_offline'
-            offline_fallback:
-                page: 'app_offline'
+##imports:
+##    - { resource: pwa_screenshots.yaml }
+#pwa:
+#    image_processor: 'pwa.image_processor.gd'
+#    manifest:
+#        enabled: true
+#        background_color: "#c026d3"
+#        theme_color: "#c026d3"
+#        name: 'Pokemon Collector'
+#        short_name: 'pokemon'
+#        description: 'OnsenUI tutorial, in Symfony'
+#        orientation: "any"
+#        display: "standalone"
+#        scope: "/"
+#        display_override: ['fullscreen', 'minimal-ui', 'window-controls-overlay']
+#        id: "/"
+#        start_url: "/"
+#        icons:
+#            - src: "images/pokemon.svg"
+#              sizes: "any"
+#        screenshots:
+#            -
+#                src: homepage/screenshot-600x800.png
+#                width: 600
+#                height: 800
+#                reference: 'https://127.0.0.1:8001/'
+#                format: image/png
+#        categories: []
+#        shortcuts: []
+#        edge_side_panel:
+#            preferred_width: 280
+#        widgets: []
+#        related_applications:
+#            - platform: "webapp"
+#              url: "https://localhost:8000/site.webmanifest"
+#    serviceworker:
+#        enabled: true
+#        src: "sw.js"
+#        skip_waiting: true
+#        workbox:
+#            resource_caches:
+#                - match_callback: 'navigate'
+#                  max_age: 365 days
+#                  max_entries: 200
+#                  strategy: 'NetworkFirst'
+#                  network_timeout: 4
+#                  preload_urls:
+#                      - '/js/fos_js_routes.js'
+#                      - 'app_index'
+#                      - 'app_offline'
+#            offline_fallback:
+#                page: 'app_offline'
