add messenger for images, prep for bootstrap

--- a/.env
+++ b/.env
@@ -46,3 +46,5 @@ SMOKE_TESTING_ROUTES_METHODS=false
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+DEFAULT_TRANSPORT=sync
