add bootstrap, sais, pokemon workflow

--- a/.env
+++ b/.env
@@ -48,3 +48,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 DEFAULT_TRANSPORT=sync
+
+SAIS_API_ENDPOINT=https://sais.survos.com
+SAIS_API_DOMAIN=sais.survos.com
+
