add ezadmin, doc workflow

--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "^4.24",
         "endroid/qr-code-bundle": "^6.0",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "knplabs/knp-menu-bundle": "^3.4",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "survos/bootstrap-bundle": "^1.5",
+        "survos/command-bundle": "^1.5",
         "survos/core-bundle": "^1.5",
         "survos/crawler-bundle": "^1.5",
         "survos/deployment-bundle": "^1.5",
