--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=test
 APP_SECRET=6e44fc203c660bc00067eb22507d4176
 ###< symfony/framework-bundle ###
 
