--- a/config/packages/survos_crawler.yaml
+++ b/config/packages/survos_crawler.yaml
@@ -1,9 +1,10 @@
 survos_crawler:
-# if you've run symfony proxy:domain:attach my-project, then the error messages will be displayed with this prefix.  That way, you can simply click on a link to open the page.
-#    base_url: 'https://my-project.wip/'
+    base_url: 'https://pokemon.wip/'
     user_class: App\Entity\User
     users:
-        - user@user.com
+#        - user@user.com
     max_depth : 3
     routes_to_ignore :
         - 'app_logout'
+    paths_to_ignore:
+        - '/pokemon/batch-delete'
