add desktop message

--- a/.env
+++ b/.env
@@ -53,3 +53,7 @@ SAIS_API_ENDPOINT=https://sais.survos.com
 SAIS_API_DOMAIN=sais.survos.com
 SAIS_ROOT=pokemon
 
+
+###> symfony/joli-notif-notifier ###
+JOLINOTIF_DSN=jolinotif://default
+###< symfony/joli-notif-notifier ###
