--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,12 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.24",
+        "ecourty/mcp-server-bundle": "^1.0",
         "endroid/qr-code-bundle": "^6.0",
+        "fguillot/json-rpc": "^1.3",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "knplabs/knp-menu-bundle": "^3.4",
+        "logiscape/mcp-sdk-php": "^1.2",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "survos/bootstrap-bundle": "^1.5",
