--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "type": "project",
     "license": "MIT",
     "keywords": ["tutorial","pwa","symfony"],
-    "minimum-stability": "RC",
-    "prefer-stable": false,
+    "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": "^8.4",
         "ext-ctype": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
@@ -21,7 +20,6 @@
         "endroid/qr-code-bundle": "^6.0",
         "fguillot/json-rpc": "^1.3",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
-        "fullpipe/php-json-rpc-client": "^1.0",
         "knplabs/knp-menu-bundle": "^3.4",
         "logiscape/mcp-sdk-php": "^1.2",
         "nelmio/cors-bundle": "^2.4",
@@ -150,5 +148,6 @@
         "symfony/stopwatch": "^7.1",
         "symfony/web-profiler-bundle": "^7.1",
         "zenstruck/browser": "^1.0"
-    }
+    },
+    "minimum-stability": "stable"
 }
