--- a/composer.json
+++ b/composer.json
@@ -73,8 +73,7 @@
         "symfony/yaml": "^7.1",
         "twig/extra-bundle": "^3.0",
         "twig/intl-extra": "^3.10",
-        "twig/twig": "^3.3|4.x-dev",
-        "zenstruck/console-extra": "1.x-dev"
+        "twig/twig": "^3.3|4.x-dev"
     },
     "config": {
         "allow-plugins": {
@@ -139,7 +138,6 @@
         "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.4",
         "pierstoval/smoke-testing": "^1.0.1",
-        "survos/maker-bundle": "^1.5",
         "symfony/browser-kit": "^7.1",
         "symfony/css-selector": "^7.1",
         "symfony/debug-bundle": "^7.1",
