--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "survos/command-bundle": "^1.5",
         "survos/core-bundle": "^1.5",
         "survos/crawler-bundle": "dev-main",
-        "survos/deployment-bundle": "^1.5",
         "survos/installer": "*@dev",
         "survos/js-twig-bundle": "^1.6.0",
         "survos/mobile-bundle": "^1.5",
@@ -138,6 +137,7 @@
         "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.4",
         "pierstoval/smoke-testing": "^1.0.1",
+        "roave/better-reflection": "^6.59",
         "symfony/browser-kit": "^7.1",
         "symfony/css-selector": "^7.1",
         "symfony/debug-bundle": "^7.1",
