--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "endroid/qr-code-bundle": "^6.0",
         "fguillot/json-rpc": "^1.3",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
+        "jwage/phpamqplib-messenger": "^0.8.5",
         "knplabs/knp-menu-bundle": "^3.4",
-        "logiscape/mcp-sdk-php": "^1.2",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "survos/bootstrap-bundle": "^1.5",
@@ -30,11 +30,12 @@
         "survos/crawler-bundle": "dev-main",
         "survos/installer": "*@dev",
         "survos/js-twig-bundle": "^1.6.0",
+        "survos/mcp-bundle": "dev-main",
         "survos/meili-bundle": "^1.6",
         "survos/mobile-bundle": "^1.5",
         "survos/sais-bundle": "^1.5",
         "survos/scraper-bundle": "^1.5",
-        "survos/workflow-helper-bundle": "^1.5",
+        "survos/state-bundle": "dev-main",
         "symfony/asset": "^7.1",
         "symfony/asset-mapper": "^7.1",
         "symfony/console": "^7.1",
@@ -53,6 +54,7 @@
         "symfony/mime": "^7.1",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "^7.1",
+        "symfony/object-mapper": "^7.3",
         "symfony/panther": "^2.1",
         "symfony/process": "^7.1",
         "symfony/property-access": "^7.1",
