--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -3,6 +3,22 @@ framework:
         failure_transport: failed
 
         transports:
+
+#            pokemon.fetch:
+#                dsn: 'doctrine://default'
+#                options:
+#                    table_name: messenger_pokemon_fetch
+#                    queue_name: pokemon.fetch
+#                    auto_setup: true
+#                    use_notify: true
+#            pokemon.download:
+#                dsn: 'doctrine://default'
+#                options:
+#                    table_name: messenger_pokemon_download
+#                    queue_name: pokemon.download
+#                    auto_setup: true
+#                    use_notify: true
+#
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             async:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
