update to survos^2

--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,17 @@
         "knplabs/knp-menu-bundle": "^3.4",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "survos/bootstrap-bundle": "^1.5",
-        "survos/command-bundle": "^1.5",
-        "survos/core-bundle": "^1.5",
-        "survos/crawler-bundle": "dev-main",
-        "survos/installer": "*@dev",
-        "survos/js-twig-bundle": "^1.6.0",
-        "survos/mcp-bundle": "dev-main",
-        "survos/meili-bundle": "^1.6",
-        "survos/mobile-bundle": "^1.5",
-        "survos/sais-bundle": "^1.5",
-        "survos/scraper-bundle": "^1.5",
-        "survos/state-bundle": "dev-main",
+        "survos/bootstrap-bundle": "^2.0",
+        "survos/command-bundle": "^2.0",
+        "survos/core-bundle": "^2.0",
+        "survos/crawler-bundle": "^2.0",
+        "survos/installer": "^2.0",
+        "survos/js-twig-bundle": "^2.0",
+        "survos/meili-bundle": "^2.0",
+        "survos/mobile-bundle": "*",
+        "survos/sais-bundle": "^2.0",
+        "survos/scraper-bundle": "^2.0",
+        "survos/state-bundle": "^2.0",
         "symfony/asset": "^7.1",
         "symfony/asset-mapper": "^7.1",
         "symfony/console": "^7.1",
@@ -110,7 +109,6 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR% --symlink": "symfony-cmd",
             "importmap:install": "symfony-cmd",
             "fos:js-routing:dump --format=js --target=public/js/fos_js_routes.js --callback=\"export default \"": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
