updates, using meili / ez for dashboard

--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "jwage/phpamqplib-messenger": "^0.8.5",
         "knplabs/knp-menu-bundle": "^3.4",
+        "meilisearch/meilisearch-php": "dev-main",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "survos/bootstrap-bundle": "^2.0",
         "survos/command-bundle": "^2.0",
         "survos/core-bundle": "^2.0",
         "survos/crawler-bundle": "^2.0",
-        "survos/installer": "^2.0",
+        "survos/ez-bundle": "^2.0",
         "survos/js-twig-bundle": "^2.0",
         "survos/meili-bundle": "^2.0",
         "survos/mobile-bundle": "*",
@@ -80,7 +81,7 @@
         "allow-plugins": {
             "endroid/installer": true,
             "php-http/discovery": true,
-            "survos/installer": true,
+            "survos/installer": false,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -139,6 +140,7 @@
         "phpunit/phpunit": "^12.3",
         "pierstoval/smoke-testing": "^1.0.1",
         "roave/better-reflection": "^6.59",
+        "survos/code-bundle": "*",
         "symfony/browser-kit": "^7.1",
         "symfony/css-selector": "^7.1",
         "symfony/debug-bundle": "^7.1",
