--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         "ext-imagick": "*",
         "api-platform/core": "^4.0",
         "doctrine/dbal": "^4.0",
-        "doctrine/doctrine-bundle": "^2.12",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/doctrine-bundle": "^3.0",
+        "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.24",
         "endroid/qr-code-bundle": "^6.0",
         "fguillot/json-rpc": "^1.3",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
-        "jwage/phpamqplib-messenger": "^0.8.5",
+        "jwage/phpamqplib-messenger": "^0.9.0",
         "knplabs/knp-menu-bundle": "^3.4",
         "meilisearch/meilisearch-php": "dev-main",
         "nelmio/cors-bundle": "^2.4",
@@ -31,48 +31,50 @@
         "survos/crawler-bundle": "^2.0",
         "survos/ez-bundle": "^2.0",
         "survos/js-twig-bundle": "^2.0",
+        "survos/lingua-core": "^2.0",
         "survos/meili-bundle": "^2.0",
         "survos/mobile-bundle": "*",
         "survos/sais-bundle": "^2.0",
         "survos/scraper-bundle": "^2.0",
         "survos/state-bundle": "^2.0",
-        "symfony/asset": "^7.1",
-        "symfony/asset-mapper": "^7.1",
-        "symfony/console": "^7.1",
-        "symfony/doctrine-messenger": "^7.1",
-        "symfony/dom-crawler": "^7.1",
-        "symfony/dotenv": "^7.1",
-        "symfony/expression-language": "^7.1",
-        "symfony/filesystem": "^7.1",
+        "symfony/asset": "^7.4|^8.0",
+        "symfony/asset-mapper": "^7.4|^8.0",
+        "symfony/console": "^7.4|^8.0",
+        "symfony/doctrine-messenger": "^7.4|^8.0",
+        "symfony/dom-crawler": "^7.4|^8.0",
+        "symfony/dotenv": "^7.4|^8.0",
+        "symfony/expression-language": "^7.4|^8.0",
+        "symfony/filesystem": "^7.4|^8.0",
         "symfony/flex": "^2",
-        "symfony/form": "^7.1",
-        "symfony/framework-bundle": "^7.1",
-        "symfony/http-client": "^7.1",
-        "symfony/intl": "^7.1",
+        "symfony/form": "^7.4|^8.0",
+        "symfony/framework-bundle": "^7.4|^8.0",
+        "symfony/http-client": "^7.4|^8.0",
+        "symfony/intl": "^7.4|^8.0",
         "symfony/joli-notif-notifier": "^7.3",
-        "symfony/mailer": "^7.1",
-        "symfony/mime": "^7.1",
-        "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "^7.1",
+        "symfony/mailer": "^7.4|^8.0",
+        "symfony/mime": "^7.4|^8.0",
+        "symfony/monolog-bundle": "^4.0",
+        "symfony/notifier": "^7.4|^8.0",
         "symfony/object-mapper": "^7.3",
         "symfony/panther": "^2.1",
-        "symfony/process": "^7.1",
-        "symfony/property-access": "^7.1",
-        "symfony/property-info": "^7.1",
-        "symfony/runtime": "^7.1",
-        "symfony/security-bundle": "^7.1",
-        "symfony/serializer": "^7.1",
+        "symfony/process": "^7.4|^8.0",
+        "symfony/property-access": "^7.4|^8.0",
+        "symfony/property-info": "^7.4|^8.0",
+        "symfony/runtime": "^7.4|^8.0",
+        "symfony/security-bundle": "^7.4|^8.0",
+        "symfony/serializer": "^7.4|^8.0",
         "symfony/stimulus-bundle": "^2.16",
-        "symfony/string": "^7.1",
-        "symfony/translation": "^7.1",
-        "symfony/twig-bundle": "^7.1",
+        "symfony/string": "^7.4|^8.0",
+        "symfony/translation": "^7.4|^8.0",
+        "symfony/twig-bundle": "^7.4|^8.0",
+        "symfony/ux-chartjs": "^2.31",
         "symfony/ux-icons": "^2.22",
         "symfony/ux-live-component": "^2.23",
         "symfony/ux-turbo": "^2.16",
         "symfony/ux-twig-component": "^2.16",
-        "symfony/validator": "^7.1",
-        "symfony/web-link": "^7.1",
-        "symfony/yaml": "^7.1",
+        "symfony/validator": "^7.4|^8.0",
+        "symfony/web-link": "^7.4|^8.0",
+        "symfony/yaml": "^7.4|^8.0",
         "twig/extra-bundle": "^3.0",
         "twig/intl-extra": "^3.10",
         "twig/twig": "^3.3|4.x-dev"
@@ -129,8 +131,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": true,
-            "require": "^7.3"
+            "allow-contrib": true
         }
     },
     "require-dev": {
@@ -141,13 +142,13 @@
         "pierstoval/smoke-testing": "^1.0.1",
         "roave/better-reflection": "^6.59",
         "survos/code-bundle": "*",
-        "symfony/browser-kit": "^7.1",
-        "symfony/css-selector": "^7.1",
-        "symfony/debug-bundle": "^7.1",
+        "symfony/browser-kit": "^7.4|^8.0",
+        "symfony/css-selector": "^7.4|^8.0",
+        "symfony/debug-bundle": "^7.4|^8.0",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^7.0",
-        "symfony/stopwatch": "^7.1",
-        "symfony/web-profiler-bundle": "^7.1",
+        "symfony/stopwatch": "^7.4|^8.0",
+        "symfony/web-profiler-bundle": "^7.4|^8.0",
         "zenstruck/browser": "^1.0"
     },
     "minimum-stability": "stable"
