--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,21 +1,20 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        connections:
+            default: &dbal_defaults
+                logging: false
+                profiling_collect_backtrace: '%kernel.debug%'
+                url: '%env(resolve:DATABASE_URL)%'
 
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '16'
+            messenger:
+                <<: *dbal_defaults
+                profiling_collect_backtrace: '%kernel.debug%'
+                url: '%env(resolve:MESSENGER_DATABASE_URL)%'
 
-        profiling_collect_backtrace: '%kernel.debug%'
-        use_savepoints: true
+
     orm:
-        auto_generate_proxy_classes: true
-        enable_lazy_ghost_objects: true
-        enable_native_lazy_objects: true
-        report_fields_where_declared: true
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
         mappings:
             App:
                 type: attribute
@@ -23,8 +22,6 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
-        controller_resolver:
-            auto_mapping: true
 
 when@test:
     doctrine:
